--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,28 +2,105 @@
 <html lang="en">
 
 <head>
-	<meta charset="UTF-8">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>{{ .Site.Title }}</title>
+	<link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-	<h1>{{ .Site.Title }}</h1>
-	{{ partial "menu.html" (dict "menuID" "main" "page" .) }}
-	<img src="{{ .Site.Params.index.imageUrl }}" height="150" width="150" draggable="false">
-	<h2>{{ .Site.Params.index.title }}</h2>
-	<p>{{ .Site.Params.index.subtitle }}</p>
 
-	<h3>Socials</h3>
-	<nav>
-		<ul>
-			{{ range sort .Site.Params.social }}
-			<li>
-				<a href="{{ .url }}" target="_blank" rel="noopener noreferrer">{{ .name }}</a>
-			</li>
-			{{ end }}
-		</ul>
-	</nav>
+
+	<style>
+		html,
+		body {
+			margin: 0px;
+			padding: 0px;
+			font-size: 18px;
+			height: 100%;
+			overflow: hidden;
+		}
+
+		body {
+			display: flex;
+		}
+
+		p {
+			margin-bottom: 50px;
+		}
+
+
+		a {
+			display: inline-block;
+			border-bottom: 2px solid #f26522;
+		}
+
+		.star {
+			width: 30%;
+			height: 100%;
+			border: 0;
+		}
+
+		.hello {
+			font-family: sans-serif;
+			margin-bottom: 50px;
+			font-size: 90px;
+			display: block;
+			font-weight: bold;
+			color: #808080;
+		}
+
+		.info {
+			padding: 5%;
+			width: 70%;
+			border-left: 1px solid #000;
+			border-right: 1px solid #000;
+			text-align: left;
+		}
+
+		.image {
+			width: 150px;
+			border-radius: 50%;
+			margin-bottom: 10px;
+			vertical-align: middle;
+			transform: scaleX(-1);
+		}
+
+
+		@media (max-width: 1000px) {
+			.star {
+				display: none;
+			}
+
+			.info {
+				width: unset;
+				margin: auto;
+				border: 0;
+			}
+		}
+
+		@media (max-width: 700px) {
+			.hello {
+				font-size: 300%;
+			}
+
+			.image {
+				width: 75px;
+			}
+		}
+	</style>
+
+	<iframe class="star" src="/star.html"></iframe>
+
+	<div class="info">
+		<div class="hello">Welc<img class="image" src="{{ .Site.Params.index.imageUrl }}">me!</div>
+		<!--<p>I build <a href="https://www.gnod.com" target="_blank">Gnod</a> and <a href="https://www.productchart.com" target="_blank">Product Chart</a>.</p>-->
+		<p>Sometimes I <a href="/blog">write</a>, <br> sometimes I code, <br>sometimes I <a
+				href="/projects">write</a> about my code
+		</p>
+		<p>Feel free to <a href="contact">hit me up</a>.
+		</p>
+	</div>
 </body>
 
 </html>
