--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -12,8 +12,9 @@
       margin: 0px;
       padding: 0px;
       font-size: 18px;
-      height: 100%;
-      overflow: hidden;
+      height: 100vh;
+      widht: 100vw;
+      /*overflow: hidden;*/
     }
 
     body {
@@ -34,6 +35,7 @@
       width: 25%;
       height: 100%;
       border: 0;
+      flex-shrink: 0;
     }
 
     .hello {
@@ -51,12 +53,13 @@
       border-left: 1px solid #000;
       border-right: 1px solid #000;
       text-align: left;
+      flex-shrink: 0;
     }
 
     .header {
       padding: 5%;
       width: 25%;
-      /* Pushes the header to the right */
+      flex-shrink: 1;
     }
 
 
@@ -72,6 +75,10 @@
     @media (max-width: 1000px) {
       .star {
         display: none;
+      }
+
+      body {
+        display: block;
       }
 
       .info {
@@ -94,18 +101,16 @@
   <!--<header>-->
   <!--  {{ partial "header.html" . }}-->
   <!--</header>-->
-  <main>
-    <iframe class="star" src="/star.html"></iframe>
-    <div class="info">
-      {{ block "main" . }}{{ end }}
-    </div>
-    <div class="header">
-      {{ partial "header.html" . }}
-    </div>
-  </main>
-  <footer>
-    {{ partial "footer.html" . }}
-  </footer>
+  <div class="header">
+    {{ partial "header.html" . }}
+  </div>
+  <div class="info">
+    {{ block "main" . }}{{ end }}
+  </div>
+  <iframe class="star" src="/star.html"></iframe>
+  <!--<footer>-->
+  <!--  {{ partial "footer.html" . }}-->
+  <!--</footer>-->
 </body>
 
 </html>
