--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,7 +1,60 @@
 {{ define "main" }}
-<h1>{{ .Title }}</h1>
-<!--{{ .Content }}-->
-{{ range .Pages }}
-<h2><a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a></h2>
+
+{{- if (and site.Params.profileMode.enabled .IsHome) }}
+{{- partial "index_profile.html" . }}
+{{- else }} {{/* if not profileMode */}}
+
+{{- if not .IsHome | and .Title }}
+<header class="page-header">
+  <h1>
+    {{ .Title }}
+    {{- with .OutputFormats.Get "rss" }}
+    <a href="{{ .RelPermalink }}" title="RSS" aria-label="RSS">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+        stroke-linecap="round" stroke-linejoin="round" height="23">
+        <path d="M4 11a9 9 0 0 1 9 9" />
+        <path d="M4 4a16 16 0 0 1 16 16" />
+        <circle cx="5" cy="19" r="1" />
+      </svg>
+    </a>
+    {{- end }}
+  </h1>
+  {{- if .Description }}
+  <div class="post-description">
+    {{ .Description | markdownify }}
+  </div>
+  {{- end }}
+</header>
+
+<main id="main" class="archive">
+  {{ $pages := union .RegularPages .Sections }}
+
+  <!--{{ if .IsHome }}-->
+  <!--  {{ $pages = where site.RegularPages "Type" "in" site.Params.mainSections }}-->
+  <!--  {{ $pages = where $pages "Params.hiddenInHomeList" "!=" "true" }}-->
+  <!--{{ end }}-->
+
+  {{ $paginator := .Paginate $pages }}
+
+  {{ range $paginator.Pages.GroupByDate "2006-01" }}
+  <div class="post-group">
+    <h3 class="archieh3">{{ dateFormat "January 2006" (printf "%s-01" .Key) }}</h3>
+    <ul class="archieul">
+      {{ range .Pages }}
+      <li class="archieli">
+        <a class="link" href="{{ .Permalink }}">{{ .Title }}</a>
+        <time class="archieTime">{{ .PublishDate.Format .Site.Params.dateFormat }}</time>
+      </li>
+      {{ end }}
+    </ul>
+  </div>
+  {{ end }}
+
+  <div class="post-group">
+    <h3>...</h3>
+  </div>
+</main>
 {{ end }}
-{{ end }}
+{{- end }}{{/* end profileMode */}}
+
+{{- end }}{{- /* end main */ -}}
