--- a/layouts/index.html
+++ b/layouts/index.html
@@ -96,7 +96,7 @@
 		<div class="hello">Welc<img class="image" src="{{ .Site.Params.index.imageUrl }}">me!</div>
 		<!--<p>I build <a href="https://www.gnod.com" target="_blank">Gnod</a> and <a href="https://www.productchart.com" target="_blank">Product Chart</a>.</p>-->
 		<p>Sometimes I <a href="/blog">write</a>, <br> sometimes I code, <br>sometimes I <a
-				href="/projects">write</a> about my code
+				href="/projects">write about my code</a>
 		</p>
 		<p>Feel free to <a href="contact">hit me up</a>.
 		</p>
