--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,5 +1,9 @@
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width">
-<link rel="stylesheet" href="css/styles.css">
-<title>{{ if .IsHome }}{{ site.Title }}{{ else }}{{ printf "%s | %s" .Title site.Title }}{{ end }}</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+{{- $styles := resources.Get "css/styles.css" | minify | fingerprint -}}
+<link rel="stylesheet" href="{{ $styles.RelPermalink }}">
+
+<title>{{ if .IsHome }}{{ .Site.Title }}{{ else }}{{ .Title }} | {{ .Site.Title }}{{ end }}</title>
+
 {{ partialCached "head/css.html" . }}
