--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,4 +1,7 @@
 {{ define "main" }}
+{{ if eq .Type "contact" }}
+{{ partial "contact.html" . }}
+{{ else }}
 <!--<div class="hello">{{ .Title }}</div>-->
 <h1>{{ .Title }}</h1>
 {{ $dateMachine := .Date | time.Format "2006-01-02T15:04:05-07:00" }}
@@ -6,4 +9,5 @@
 
 {{ .Content }}
 {{ partial "terms.html" (dict "taxonomy" "tags" "page" .) }}
+{{ end }}
 {{ end }}
