--- a/layouts/star.html
+++ b/layouts/star.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class=" lxmxmazfgo idc0_343">
+<html>
 
 <head>
 	<style>
@@ -227,50 +227,50 @@
 
 		#arm0.out>path,
 		#logo_wrapper #ball0.out {
-			background: #3c6595;
-			fill: #3c6595;
+			background: #2A3D66;
+			fill: #2A3D66;
 		}
 
 		#arm1.out>path,
 		#logo_wrapper #ball1.out {
-			background: #138818;
-			fill: #138818;
+			background: #26734D;
+			fill: #26734D;
 		}
 
 		#arm2.out>path,
 		#logo_wrapper #ball2.out {
-			background: #be1919;
-			fill: #be1919;
+			background: #B0303E;
+			fill: #B0303E;
 		}
 
 		#arm3.out>path,
 		#logo_wrapper #ball3.out {
-			background: #c9df11;
-			fill: #c9df11;
+			background: #E4A800;
+			fill: #E4A800;
 		}
 
 		#arm4.out>path,
 		#logo_wrapper #ball4.out {
-			background: #00cbd2;
-			fill: #00cbd2;
+			background: #219EBC;
+			fill: #219EBC;
 		}
 
 		#arm5.out>path,
 		#logo_wrapper #ball5.out {
-			background: #e8b006;
-			fill: #e8b006;
+			background: #F07167;
+			fill: #F07167;
 		}
 
 		#arm6.out>path,
 		#logo_wrapper #ball6.out {
-			background: #e806e5;
-			fill: #e806e5;
+			background: #8E44AD;
+			fill: #8E44AD;
 		}
 
 		#arm7.out>path,
 		#logo_wrapper #ball7.out {
-			background: #7D0A0A;
-			fill: #7D0A0A;
+			background: #5E1F1F;
+			fill: #5E1F1F;
 		}
 
 		div {}
@@ -352,7 +352,7 @@
 
 		function step() {
 			if (!running) return;
-			if (Math.random() < 0.1) rotate();
+			if (Math.random() < 0.2) rotate();
 			for (var i = 0; i < 8; i++) {
 				if (Math.random() < 0.1) toggle(i);
 			}
