--- a/layouts/index.html
+++ b/layouts/index.html
@@ -14,31 +14,30 @@
 	<style>
 		html,
 		body {
-			margin: 0px;
-			padding: 0px;
+			margin: 0;
+			padding: 0;
 			font-size: 18px;
 			height: 100%;
-			overflow: hidden;
+			overflow: hidden
 		}
 
 		body {
-			display: flex;
+			display: flex
 		}
 
 		p {
-			margin-bottom: 50px;
+			margin-bottom: 50px
 		}
-
 
 		a {
 			display: inline-block;
-			border-bottom: 2px solid #B0303E;
+			border-bottom: 2px solid #B0303E
 		}
 
 		.star {
 			width: 30%;
 			height: 100%;
-			border: 0;
+			border: 0
 		}
 
 		.hello {
@@ -46,8 +45,8 @@
 			margin-bottom: 50px;
 			font-size: 100px;
 			display: block;
-			font-weight: bold;
-			color: #808080;
+			font-weight: 700;
+			color: gray
 		}
 
 		.info {
@@ -55,7 +54,7 @@
 			width: 70%;
 			border-left: 1px solid #000;
 			border-right: 1px solid #000;
-			text-align: left;
+			text-align: left
 		}
 
 		.image {
@@ -63,30 +62,28 @@
 			border-radius: 50%;
 			margin-bottom: 10px;
 			vertical-align: middle;
-			transform: scaleX(-1);
+			transform: scaleX(-1)
 		}
-
 
 		@media (max-width: 1000px) {
 			.star {
-				display: none;
+				display: none
 			}
 
 			.info {
 				width: unset;
 				margin: auto;
-				border: 0;
+				border: 0
 			}
-
 		}
 
 		@media (max-width: 700px) {
 			.hello {
-				font-size: 400%;
+				font-size: 400%
 			}
 
 			.image {
-				width: 75px;
+				width: 75px
 			}
 		}
 	</style>
@@ -99,7 +96,7 @@
 		<p>Sometimes I <a href="/blog">write</a>, <br> Sometimes I code, <br>Sometimes I <a
 				href="/tags/projects">write about my code.</a>
 		</p>
-		<p><a href="contact.html">Reach out</a> anytime!
+		<p><a href="contact.html">Reach out</a> to <a href="/about">me</a> anytime!
 		</p>
 	</div>
 </body>
