--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -29,19 +29,19 @@ a.linkButton{border-bottom:0;display:block;width:fit-content;margin-top:2em;marg
 .menu:hover{border-bottom:2px solid #f26522}
 .content{width:800px;padding-bottom:100px;background:#fff;border-radius:10px;margin:auto;text-align:left;line-height:1.35}
 .commentFrame{width:100%;height:800px;border:0}
+}
 @media (max-width: 1200px) {
 .navi{position:static;width:auto;text-align:left;margin-top:40px}
 .navi a{display:inline;margin-right:20px}
 .header h1{margin-top:40px}
+.navi{text-align:center}
 }
 @media (max-width: 1000px) {
 .content{width:auto;padding-left:20px;padding-right:20px}
 .header{max-width:none;padding-left:20px;padding-right:20px}
 }
-@media (max-width: 550px) {
+@media (max-width: 579px) {
 h1{font-size:25px}
 .header{text-align:center}
-.navi{font-size:18px;margin-top:20px;text-align:center}
-}
-
+.navi{font-size:18px;margin-top:20px;}
 }
